fix #5: horizontal scrollbar in windows

--- a/site_files/style.css
+++ b/site_files/style.css
@@ -12,7 +12,7 @@ body {
 textarea {
   padding: 3rem;
   resize: none;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background: #333;
   color: white;
